Modified the entire class to follow encapsulation rules